<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/size_20dp"
                android:background="@color/colorPrimary">
                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@mipmap/ic_launcher_round"
                    android:layout_marginBottom="@dimen/size_4dp"
                    style="@style/OnClick"/>
                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/size_16dp"
                    android:paddingRight="@dimen/size_16dp"
                    android:paddingBottom="@dimen/size_16dp"
                    android:textSize="@dimen/size_16sp"
                    android:text="@string/click_login"
                    style="@style/OnClick"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvCollect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_collect"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_collect"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_system"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_system"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_project"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_project"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvNavi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_navi"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_navi"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_about"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_about"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableLeft="@drawable/ic_menu_logout"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/text_3"
                android:textSize="@dimen/size_16sp"
                android:text="@string/menu_logout"
                android:visibility="invisible"
                style="@style/OnClick"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_16dp"
        android:paddingTop="@dimen/size_2dp"
        android:textSize="@dimen/size_16sp"
        android:textColor="@color/text_9"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/OnClick"/>

    </LinearLayout>
    <com.king.view.flutteringlayout.FlutteringLayout
        android:id="@+id/flutteringLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:duration="3000"
        app:enter_duration="300"
        app:scale="1.0"/>
</RelativeLayout>