<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.king.wanandroid.app.account.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@mipmap/ic_launcher_round"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:maxLength="@integer/username_max_length"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableRight="@drawable/btn_clear_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:drawablePadding="@dimen/size_4dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/login"
            style="?android:attr/borderlessButtonStyle"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:padding="@dimen/size_4dp"
            android:text="@string/register_u"
            android:layout_marginBottom="20dp"/>

    </android.support.constraint.ConstraintLayout>

</layout>