<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.king.wanandroid.app.search.SearchViewModel"/>

    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">
            <LinearLayout
                android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/title_height"
                  android:gravity="center_vertical"
                  android:background="@color/white">
                <ImageView
                    android:id="@+id/ivLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_black_back_selector"
                    android:paddingLeft="@dimen/size_14dp"
                    android:paddingRight="@dimen/size_14dp"
                    style="@style/OnClick"/>
                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textSize="@dimen/size_16sp"
                    android:hint="@string/hint_search"
                    android:paddingLeft="@dimen/size_4dp"
                    android:paddingRight="@dimen/size_4dp"
                    android:imeOptions="actionSearch"
                    android:layout_marginRight="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:layout_marginBottom="@dimen/size_4dp"
                    android:drawablePadding="@dimen/size_4dp"
                    android:drawableRight="@drawable/btn_clear_selector"
                    android:maxLines="@integer/search_max_length"
                    android:background="@drawable/search_bg"/>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tvHistory"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/size_16sp"
                            android:textColor="@color/text_3"
                            android:paddingLeft="@dimen/size_16dp"
                            android:paddingRight="@dimen/size_16dp"
                            android:paddingTop="@dimen/size_8dp"
                            android:paddingBottom="@dimen/size_8dp"
                            android:text="@string/label_search_history"/>
                        <ImageView
                            android:id="@+id/ivDeleteHistory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/size_6dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:src="@drawable/btn_delete_selector"/>
                    </LinearLayout>
                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/tflHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/size_16dp"
                        android:paddingRight="@dimen/size_16dp"
                        android:paddingBottom="10dp"/>
                    <include layout="@layout/line_xh"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/size_16sp"
                            android:textColor="@color/text_3"
                            android:paddingLeft="@dimen/size_16dp"
                            android:paddingRight="@dimen/size_16dp"
                            android:paddingTop="@dimen/size_8dp"
                            android:paddingBottom="@dimen/size_8dp"
                            android:text="@string/label_hot_key"/>
                        <com.zhy.view.flowlayout.TagFlowLayout
                            android:id="@+id/tflHot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/size_16dp"
                            android:paddingRight="@dimen/size_16dp"
                            android:paddingBottom="10dp"/>
                </LinearLayout>
            </ScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</layout>